<resources>
    <!-- General App Strings -->
    <string name="app_name">PawTasksDemo</string>

    <!-- Task Page Strings -->
    <string name="TaskPageTitle">Task List</string>
    <string name="NewTaskButtonText">ADD TASK</string>
    <string name="navigation_tasks_title">Tasks</string>

    <!-- Gacha Page Strings -->
    <string name="navigation_gacha_title">Gacha</string>
    <string name="GatchaPageTitle">Adopt A Pet!</string>
    <string name="GachaPullButtonText">PULL</string>
    <string name="GachaTokenLabelText">TOKENS:</string>
    <string name="legendaryPullDialogTitle">LEGENDARY</string>
    <string name="epicPullDialogTitle">EPIC</string>
    <string name="rarePullDialogTitle">RARE</string>
    <string name="commonPullDialogTitle">COMMON</string>
    <string name="commonDialogButtonText">OK</string>

    <!-- Pet View Page Strings -->
    <string name="PetViewPageTitle">Pet View</string>
    <string name="navigation_pet_title">Pet</string>
    <string name="PetTokenLabelText">TOKENS:</string>
    <string name="feedButtonText">FEED</string>
    <string name="standButtonText">STAND</string>
    <string name="sitButtonText">SIT</string>
    <string name="walkButtonText">WALK</string>
    <string name="danceButtonText">DANCE</string>

</resources>