<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PetPageBackgroundColor"
    tools:context=".PetViewPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#F1F1EA">

        <ImageView
            android:id="@+id/petdex_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/pet_house"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/petViewPageTitle_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/PetViewPageTitle"
            android:textColor="@color/PetViewPageTitleColorBlack"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"/>

        <View
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/currentPetImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="430dp">

        <!-- ImageView to display the image to the left of the text views -->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/tokens" /> <!-- Replace with your image resource -->

        <!-- TextView for the token label -->
        <TextView
            android:id="@+id/petTokenLabel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GachaTokenLabelText"
            android:textSize="35sp"
            android:layout_marginStart="8dp"
            android:textAlignment="center" />

        <!-- TextView for the token count -->
        <TextView
            android:id="@+id/petTokenCount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_marginStart="8dp"
            android:text="2" /> <!-- Replace with your token count value -->
    </LinearLayout>

    <Button
        android:id="@+id/walk_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="25dp"
        android:text="@string/walkButtonText"
        android:backgroundTint="#A55814"
        android:textSize="25sp"
        android:layout_marginTop="475dp"
        android:enabled="false" />

    <Button
        android:id="@+id/sitstand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="25dp"
        android:text="@string/sitButtonText"
        android:backgroundTint="#A55814"
        android:textSize="25sp"
        android:layout_marginTop="575dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/feed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="215dp"
        android:text="@string/feedButtonText"
        android:backgroundTint="#A55814"
        android:textSize="25sp"
        android:layout_marginTop="475dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/dance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="215dp"
        android:text="@string/danceButtonText"
        android:backgroundTint="#A55814"
        android:textSize="25sp"
        android:layout_marginTop="575dp"
        android:enabled="false"/>

</FrameLayout>