<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/GachaPageBackgroundColor"
    tools:context=".GachaPage">

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:background="#F1F1EA">


        <ImageView
            android:id="@+id/LeftImage"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="10dp" />


        <TextView
            android:id="@+id/gachaPageTitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GatchaPageTitle"
            android:textColor="@color/GachaPageTitleColorBlack"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


        <ImageView
            android:id="@+id/RightImage"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gachamachinegif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gachamachinegif"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/gachaPull_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/GachaPullButtonText"
        android:textColor="@color/white"
        android:backgroundTint="#A55814"
        android:textSize="35sp"
        android:layout_marginTop="600dp"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="550dp"
        android:layout_gravity="center_horizontal">

        <!-- ImageView to display the image to the left of the text views -->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/tokens" /> <!-- Replace with your image resource -->
            <TextView
                android:id="@+id/gachaTokenLabel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GachaTokenLabelText"
                android:textSize="35sp"
                android:textAlignment="center"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/gachaTokenCount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp" />
    </LinearLayout>



<!--    <Button-->
<!--        android:id="@+id/addTokens_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="500dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:text="Add"-->
<!--        android:backgroundTint="#A55814"/>-->

</FrameLayout>